
erDiagram
    City }|--|{ User : cities
    City ||--o{ Weather : weather
    Weather |o--o| City : city
    
    User {
        int id
        string name
        string email
        string password
        list cities
    }
    City {
        int id
        string name
        Weather weather

    }

    Weather {
        string weather_status
        float temperature
        string weather_details
        City city
    }
